# fpl-model

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/plans/: 2026-03-08-advanced-ml-models-design.md  2026-03-08-advanced-ml-models-implementation.md  2026-03-08-fpl-ml-pipeline-design.md  2026-03-08-fpl-ml-pipeline-implementation.md  2026-03-08-mid-season-retraining-design.md  2026-03-08-mid-season-retraining-implementation.md
notebooks/: model_comparison.ipynb
src/fpl_model/cli/: main.py
src/fpl_model/data/: cache.py  db.py  ingest.py
src/fpl_model/data/etl/: schemas.py  transformers.py  unifier.py
src/fpl_model/data/sources/: base.py  fpl_api.py  vaastav.py
src/fpl_model/evaluation/: comparison.py  metrics.py  reports.py
src/fpl_model/models/: base.py  defaults.py  features.py  registry.py
src/fpl_model/models/optimizers/: greedy.py  lp_optimizer.py
src/fpl_model/models/predictors/: form.py  sequence_predictor.py  xgboost_predictor.py
src/fpl_model/models/rl/: environment.py  ppo.py
src/fpl_model/simulation/: actions.py  engine.py  rules.py  state.py
tests/: test_cli.py  test_integration.py  test_ml_integration.py
tests/data/: test_cache.py  test_db.py  test_etl.py  test_fpl_api.py  test_ingest.py  test_vaastav.py
tests/evaluation/: test_evaluation.py
tests/models/: test_base.py  test_features.py  test_greedy_transfers.py  test_lp_optimizer.py  test_ppo.py  test_rl_environment.py  test_sequence_predictor.py  test_xgboost_predictor.py
tests/simulation/: test_engine.py  test_rules.py
